updated projects and styles.

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,16 @@
 {
   width: 25%;
 }
+.wrapper {
+    text-align: center;
+}
+
+.button {
+    position: absolute;
+    top: 50%;
+}
+
+body{
+  margin: 0px;
+  width: 100%;
+}
