--- a/css/styles.css
+++ b/css/styles.css
@@ -35,3 +35,12 @@ body{
 .imgcircle {
 	border-radius: 50%;
 }
+
+.spoiler { 
+  color: black; 
+  background-color:black;
+}
+
+.spoiler:hover{
+  color: white;
+  }
